--- a/fontend/Views/Client/Partials/header.pug
+++ b/fontend/Views/Client/Partials/header.pug
@@ -153,7 +153,7 @@
       li.hover2
         a(href=`/blog`) Blog
       li
-        a(href='') Chính sách
+        a(href='/policy') Chính sách
       li
         a(href='') Liên hệ
   .logo
@@ -165,5 +165,5 @@
       a.hotline(href='')  0986604006
     .line
     p
-      a.cart(href='') Gi&#x1ECF; h&agrave;ng / 
+      a.cart(href='') Giỏ hàng /
 
